30-applications/traefik/extras/authentikmiddleware-internal.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: authentik-forward-auth-local
spec:
  forwardAuth:
    # This address should point to the cluster endpoint provided by the kubernetes service, not the Ingress.
    address: http://authentik-server.authentik.svc.cluster.local/outpost.goauthentik.io/auth/traefik
    trustForwardHeader: true
    authResponseHeaders:
      - X-authentik-username
      - X-authentik-groups
      - X-authentik-entitlements
      - X-authentik-email
      - X-authentik-name
      - X-authentik-uid
      - X-authentik-jwt
      - X-authentik-meta-jwks
      - X-authentik-meta-outpost
      - X-authentik-meta-provider
      - X-authentik-meta-app
      - X-authentik-meta-version
      # Add the 'authorization' header to authResponseHeaders if you need proxy providers which
      # send a custom HTTP-Basic Authentication header based on values from authentik
      # - authorization
