30-applications/traefik/extras/networkpolicy-namespace.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: namespace-ingress
  namespace: traefik
spec:
  podSelector: {}
  policyTypes:
    - Ingress
  ingress:
    # Same namespace
    - from:
        - podSelector: {}

    # web and websecure entrypoints
    - ports:
        - port: 8000
        - port: 8443

    # For the clouflared entrypoint, only cloudflared can talk to it because we trust its CF headers for the real IP
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: cloudflare-tunnel
      ports:
        - port: 8444
